data_url/data_url_18264.txt
_quantumprogram.py generates a syntax error with Python 3.4 due to dictionary merging that is not supported in python 3.4. See this topic:
https://stackoverflow.com/questions/38987/how-to-merge-two-dictionaries-in-a-single-expression
Here is the error message:
File "../../qiskit-sdk-py/qiskit/_quantumprogram.py", line 1002
"config": {**job["config"], **qobj["config"]}})
^
SyntaxError: invalid syntax
From dtmcclure:
Based on the stackoverflow discussion referenced above, it seems like the for loop at that point in _quantumprogram should be replaced with the version below in order to make this code work for any version of Python 3.
Thanks for the report!
I'll take a look.
@dan9thsense I've been reviewing what needs to be done for making the SDK compatible with Python 3.4, but seems like too many things need to addressed/ported. Unfortunately, we cannot support Python 3.4 for the moment.
Anyway, we would love to hear from your specific use cases, is it possible for you to upgrade to Python 3.5/3.6?
Thanks!
Great, I'm glad you can use QISKit :)
